fixed user profile API
